# ChangeLog for dev-python/pysnmp-mibs
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pysnmp-mibs/ChangeLog,v 1.8 2011/12/30 18:14:48 mr_bones_ Exp $

  30 Dec 2011; Michael Sterrett <mr_bones_@gentoo.org> pysnmp-mibs-0.1.2.ebuild:
  whitespace

*pysnmp-mibs-0.1.2 (25 Dec 2011)

  25 Dec 2011; Patrick Lauer <patrick@gentoo.org> +pysnmp-mibs-0.1.2.ebuild:
  Bump for #393625

  23 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pysnmp-mibs-0.0.8a.ebuild:
  Fix dependencies. Restrict Jython ABIs.

*pysnmp-mibs-0.0.8a (28 Nov 2009)

  28 Nov 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +pysnmp-mibs-0.0.8a.ebuild:
  Version bump. Set SUPPORT_PYTHON_ABIS.

*pysnmp-mibs-0.0.6a (23 Jun 2008)

  23 Jun 2008; Tiziano Müller <dev-zero@gentoo.org>
  -pysnmp-mibs-0.0.5a.ebuild, +pysnmp-mibs-0.0.6a.ebuild:
  Version bump, added CHANGES to DOCS, added missing PYTHON_MODNAME

  24 Feb 2007; Martin Jackson <mjolnir@gentoo.org>
  -pysnmp-mibs-0.0.4a.ebuild:
  Remove vestiges of pysnmp-4.1.6 - superseded by 4.1.7

*pysnmp-mibs-0.0.5a (24 Feb 2007)

  24 Feb 2007; Martin Jackson <mjolnir@gentoo.org>
  +pysnmp-mibs-0.0.5a.ebuild:
  Version bump

*pysnmp-mibs-0.0.4a (02 Feb 2007)

  02 Feb 2007; Martin Jackson <mjolnir@gentoo.org> +metadata.xml,
  +pysnmp-mibs-0.0.4a.ebuild:
  Adding ebuild for bug #159345
